:recycle: 리팩토링: 패키지 구조 변경 및 DTO 수정